# myjgs

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  TODO  block.cpp  block.h  config.json  item.h  test.cpp  test.jgs  test.jgs.hex  test2.jgs  test3.jgs  type.cpp  type.h
src/: CMakeLists.txt  block.cpp  block.h  event.cpp  event.h  game.cpp  game.h  item.cpp  item.h  myjgs.h  player.cpp  player.h  test.cpp  type.cpp  type.h
test/: CMakeLists.txt  test.cpp
test/test_files/中文/: 2022_09_30_00_44_53.txt
utils/: CMakeLists.txt  config.cpp  config.h
